<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_nav_graph"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="it.unipi.di.sam.overwave.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/title_fragment"
        >
        <action
            android:id="@+id/action_titleFragment_to_transmitterFragment"
            app:destination="@id/transmitterFragment" />
        <action
            android:id="@+id/action_titleFragment_to_receiverFragment"
            app:destination="@id/receiverFragment" />
        <action
            android:id="@+id/action_titleFragment_to_laboratoryFragment"
            app:destination="@id/laboratoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/transmitterFragment"
        android:name="it.unipi.di.sam.overwave.TransmitterFragment"
        android:label="@string/transmitter"
        tools:layout="@layout/transmitter_fragment" />
    <fragment
        android:id="@+id/receiverFragment"
        android:name="it.unipi.di.sam.overwave.ReceiverFragment"
        android:label="@string/receiver"
        tools:layout="@layout/receiver_fragment" />
    <fragment
        android:id="@+id/laboratoryFragment"
        android:name="it.unipi.di.sam.overwave.LaboratoryFragment"
        android:label="@string/laboratory"
        tools:layout="@layout/laboratory_fragment" />
</navigation>