<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="it.unipi.di.sam.overwave.TitleFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/waves"
        android:alpha="0.6"
        android:contentDescription="Blue waves background image"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/title_horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/title_left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/title_right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/to_transmit_activity_button"
            app:layout_constraintStart_toStartOf="@id/title_left_guideline"
            app:layout_constraintEnd_toEndOf="@id/title_right_guideline"
            android:text="@string/app_name"
            tools:text="@string/app_name"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/to_transmit_activity_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/title_horizontal_guideline"
            app:layout_constraintBottom_toTopOf="@id/to_receive_activity_button"
            app:layout_constraintStart_toStartOf="@id/title_left_guideline"
            app:layout_constraintEnd_toEndOf="@id/title_right_guideline"
            app:layout_constraintVertical_bias="1"
            android:text="@string/transmitter"
            style="@style/PrimaryButton"
            />
        <!--app:layout_constraintVertical_chainStyle="packed"-->


        <Button
            android:id="@+id/to_receive_activity_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/to_transmit_activity_button"
            app:layout_constraintBottom_toTopOf="@id/to_lab_activity_button"
            app:layout_constraintStart_toStartOf="@id/title_left_guideline"
            app:layout_constraintEnd_toEndOf="@id/title_right_guideline"
            android:text="@string/receiver"
            style="@style/PrimaryButton"
            />

        <Button
            android:id="@+id/to_lab_activity_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/to_receive_activity_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_left_guideline"
            app:layout_constraintEnd_toEndOf="@id/title_right_guideline"
            android:text="@string/laboratory"
            style="@style/PrimaryButton"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>